<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="com.example.shapelearning.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/padding_large">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/icon_size_medium"
        android:layout_height="@dimen/icon_size_medium"
        android:contentDescription="@string/back"
        android:padding="@dimen/padding_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.ShapeLearning.Headline2"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                style="@style/Widget.ShapeLearning.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sound"
                        android:textAppearance="@style/TextAppearance.ShapeLearning.Body1"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switchSound"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:checked="true"
                        android:minHeight="@dimen/min_touch_target_size"
                        android:text="@string/sound"
                        android:textAppearance="@style/TextAppearance.ShapeLearning.Body1" />
                    <!-- Two-way binding for soundEnabled -->
                    <Switch
                        android:id="@+id/switchMusic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.musicEnabled}"
                        android:minHeight="@dimen/min_touch_target_size"
                        tools:checked="true"
                        android:text="@string/music"
                        android:textAppearance="@style/TextAppearance.ShapeLearning.Body1" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/Widget.ShapeLearning.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textAppearance="@style/TextAppearance.ShapeLearning.Body1"
                        android:textStyle="bold" />                    <!-- Update to use binding adapter -->
                    <Spinner
                        android:id="@+id/spinnerLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:selectedLanguage="@{viewModel.selectedLanguage}"
                        app:onLanguageSelected="@{(language) -> viewModel.userAction(() -> viewModel.selectedLanguage.setValue(language))}"
                        android:layout_marginTop="@dimen/margin_small"
                        android:minHeight="@dimen/min_touch_target_size" />
                        app:selectedLanguage="@{viewModel.selectedLanguage}"
                        app:onLanguageSelected="@{viewModel::setLanguage}" />
                        tools:listitem="@layout/simple_spinner_dropdown_item" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/Widget.ShapeLearning.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/difficulty"
                        android:textAppearance="@style/TextAppearance.ShapeLearning.Body1"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radioGroupDifficulty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small">
                        app:selectedDifficulty="@{viewModel.selectedDifficulty}"
                        app:onDifficultySelected="@{(difficulty) -> viewModel.userAction(() -> viewModel.selectedDifficulty.setValue(difficulty))}">
                        tools:checkedButton="@id/radioDifficultyEasy"

                        <RadioButton
                            android:id="@+id/radioDifficultyEasy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="@dimen/min_touch_target_size"
                            android:text="@string/difficulty_easy"
                            android:textAppearance="@style/TextAppearance.ShapeLearning.Body1" />

                        <RadioButton
                            android:id="@+id/radioDifficultyMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="@dimen/min_touch_target_size"
                            android:text="@string/difficulty_medium"
                            android:textAppearance="@style/TextAppearance.ShapeLearning.Body1" />

                        <RadioButton
                            android:id="@+id/radioDifficultyHard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="@dimen/min_touch_target_size"
                            android:text="@string/difficulty_hard"
                            android:textAppearance="@style/TextAppearance.ShapeLearning.Body1" />
                    </RadioGroup>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnSave"
                style="@style/Widget.ShapeLearning.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
